--- a/RestaurantReview/gradle/libs.versions.toml
+++ b/RestaurantReview/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ constraintlayout = "2.2.1"
 retrofit = "3.0.0"
 
 [libraries]
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
