--- a/MyUnitTest/gradle/libs.versions.toml
+++ b/MyUnitTest/gradle/libs.versions.toml
@@ -10,9 +10,12 @@ activity = "1.12.3"
 constraintlayout = "2.2.1"
 mockitoCore = "5.21.0"
 mockitoInline = "5.2.0"
+runner = "1.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-rules = { module = "androidx.test:rules", version.ref = "runner" }
+androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
